--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid d-flex mt-5">
     <div id="login" class="signin-card">
      
-      <h1 class="display1"> Login</h1>
+      <h1 class="display1">Contract Generation  |  Login</h1>
       <!-- <p class="subhead">Description</p> -->
       <form role="form">
         <div>
