--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -51,17 +51,20 @@
             <option> Very Good Scheme</option>
           </select>
         </div>
+        <div class="form-row mt-2">
+          <button  class="btn btn-primary">Select -></button>
+        </div>
       </div>
       <div class="form-group col-6">
-        <div class="mt-4">
+        <!-- <div class="mt-4">
           <span class="mr-3">
             Number Of Scheme:
           </span>
           <span class="btn btn-secondary mr-2" (click)="subtractProduct()">-</span>
           <span class="mr-2"> {{numberOfScheme }} </span>
           <span class="btn btn-secondary" (click)="addProduct()"> + </span>
-        </div>
-        <!-- <div class="hard-shadow card border border-info category-card">
+        </div> -->
+        <div class="card border border-info category-card">
           <h5 class="card-title text-center mx-2 mt-2 bg-light">Selected Schemes</h5>
           <div class="card-body mb-2">
             <div class="custom-height">
@@ -74,7 +77,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
     <!-- <div class="form-group">
