--- a/src/app/superadmin/superadmin.component.html
+++ b/src/app/superadmin/superadmin.component.html
@@ -1,1 +1,94 @@
-<p>superadmin works!</p>
+<div class="container-flex mt-3 mb-3">
+  <div class="btn btn-success float-right"  data-toggle="modal" data-target="#createuser">
+    + Add +
+  </div>
+</div>
+<div class="container-flex">
+  <table class="table table-striped mt-3">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Username</th>
+        <th scope="col">Role</th>
+        <th scope="col">Status</th>
+        <th scope="col">Actions</th>
+        
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users; let i = index;">
+        <th scope="row"> {{ i+1 }} </th>
+        <td> {{user.userName}}</td>
+        <td> {{user.role}}</td>
+        <td>{{user.active}}</td>
+        <td> 
+        
+          <span class="btn btn-danger btn-circle btn-circle-sm" (click)="deleteUser(user.userId)">
+           <!-- <i class="fa fa-car">   </i> -->
+          X
+          </span>
+          
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="createuser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create User</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        
+
+
+
+        <form [formGroup]="userForm">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputEmail4">User ID</label>
+              <input type="email" class="form-control" id="inputEmail4" placeholder="User ID" formControlName="userName">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputState">Role</label>
+              <select id="inputState" class="form-control" formControlName="role">
+                <option selected>User</option>
+                <option>Admin</option>
+              </select>
+            </div>
+          </div>
+          
+          
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputPassword4">Password</label>
+              <input type="password" class="form-control" id="inputPassword" placeholder="Password" formControlName="password">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputPassword2">Re-enter Password</label>
+              <input type="password" class="form-control" id="inputPassword2" placeholder="Re-enter Password" formControlName="password2">
+            </div>
+            
+          </div>
+        </form>
+
+
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary"  data-dismiss="modal" (click)="createUser(userForm.value)">Create</button>
+      </div>
+    </div>
+  </div>
+</div>
