--- a/src/app/superadmin/superadmin.component.html
+++ b/src/app/superadmin/superadmin.component.html
@@ -23,7 +23,7 @@
         <td>{{user.active}}</td>
         <td> 
         
-          <span class="btn btn-danger btn-circle btn-circle-sm" (click)="deleteUser(user.userId)">
+          <span class="btn btn-danger btn-circle btn-circle-sm" (click)="deleteUser(user.userId,user.role)">
            <!-- <i class="fa fa-car">   </i> -->
           X
           </span>
