creation of misc . utils

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,3 +26,13 @@
     </div>
   </div>
 </div>
+
+<div class="container bg-dark p-2">
+  <div class="text-light ml-2"> Easy Navigation (Temp)</div>
+  <span [routerLink]="['/local-body']" routerLinkActive="router-link-active"  class="btn btn-warning m-1"> Local body</span>
+  <span [routerLink]="['/so']" routerLinkActive="router-link-active"  class="btn btn-warning m-1"> SO</span>
+  <span [routerLink]="['/scheme']" routerLinkActive="router-link-active"  class="btn btn-warning m-1">Scheme</span>
+  <span [routerLink]="['/staff']" routerLinkActive="router-link-active"  class="btn btn-warning m-1">staff</span>
+  <span [routerLink]="['/local-body']" routerLinkActive="router-link-active"  class="btn btn-warning m-1"></span>
+  <span [routerLink]="['/local-body']" routerLinkActive="router-link-active"  class="btn btn-warning m-1"></span>
+</div>
